Refactore code and add new styles

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         <div id="main"></div>
     </main>
     <footer>
-        <p>2022</p>
+        <p>Copyright 2022</p>
     </footer>
 </body>
 </html>
